# midas-journal-714

NGFImageToImageMetric/: CMakeLists.txt  make-paper.sh
NGFImageToImageMetric/Code/: CMakeLists.txt  deltadot.oct  itkGetImageNoiseFunction.h  itkImageToNGFFilter.h  itkImageToNGFFilter.txx  itkMyDefines.h  itkNGFMetricKernel.h  itkNGFMetricKernel.txx  itkNormalizedGradientFieldImageToImageMetric.h  itkNormalizedGradientFieldImageToImageMetric.txx  testImageToNGFFilter.cpp  testNGFMetricKernel.cpp  testNormalizedGradientFieldImageToImageMetric.cpp
NGFImageToImageMetric/Doc/: InsightJournal.bib  InsightJournal.sty  Makefile  NGFImageMetric.tex  testdata.ods
NGFImageToImageMetric/Examples/: CMakeLists.txt  ImageToNGF.cxx  MultiResImageRegistration2D.cxx  MultiResImageRegistration2DTranslateOnly.cxx  NGFGradientMap.cxx
